mytc update searchPoDetail